<resources>
    <string name="app_name">Today</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="next">Next</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="save">SAVE</string>
    <string name="title_activity_google_account_picker">GoogleAccountPicker</string>
    <string name="done">DONE</string>
</resources>
